# Masaya-Bot

./: .breakpoints  README.md  _test_runnertest_suite.py  discord.js  main.py  music.py  oaf1.webm  paulo.webm  pepe.m4a  pyproject.toml  reactrole.json  song.mp3.part  youtube--yyq-Kr06D8-347aidan_-_MEMORIES_Official_Music_Video.webm  youtube-2V_uAAAH-_Q-Doja_Cat_-_Woman_Visualizer.webm  youtube-9oyodEkzn94-ITZY_SWIPE_M_V.webm  youtube-GDTD24KsdGc-Love_Like_You_feat._Rebecca_Sugar_End_Credits.webm  youtube-Ix4L9am2Kwk-Doja_Cat_-_Ain_t_Shit_Visualizer.m4a  youtube-fAQo_P2lmzw-Pasar_Desapercibido.m4a
Documentacion/: BOT.rar  EJEM1.c  MENU.rar  Practica.c
TAREAS/: CRUD.rar  MARIOBROS.h  Munecos.C  pipe.c  tupapa.h
cogs/: comandos.py  music.py  simple.py  wiki.py
leveling/: __init__.py
resources/: complejidad.txt  cuento.c  leonel.c
